--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Soumya Shikha",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.5.3"
   }
 }
